@@ -98,6 +98,10 @@
         comment = "performance and gui bug fixes"
     [/entry]
     [entry]
+        name = "Moritz Göbelbecker (mog)"
+        comment = "Work on the terrain engine"
+    [/entry]
+    [entry]
         name = "Nicolas Weeger (Ryo)"
         comment = "Python API"
     [/entry]
