@@ -55,89 +55,118 @@
 #  Bridges
 #
 
-#  >>>>>>>> Shallow Water Bridge
 [terrain]
-    symbol_image=bridge-n-s-tile
+    symbol_image=bridge-n-s
     id=bridge
     name= _ "Bridge"
-    string=Ww^Bw|
-    aliasof=Gt, Ww
+    string=^Bw|
+    aliasof=_bas, Gt
     editor_group=bridge, water
 [/terrain]
 
 [terrain]
-    symbol_image=bridge-ne-sw-tile
+    symbol_image=bridge-ne-sw
     id=bridgediag1
     name= _ "Bridge"
-    string=Ww^Bw/
-    aliasof=Gt, Ww
+    string=^Bw/
+    aliasof=_bas, Gt
     editor_group=bridge, water
 [/terrain]
 
 [terrain]
-    symbol_image=bridge-se-nw-tile
+    symbol_image=bridge-se-nw
     id=bridgediag2
     name= _ "Bridge"
-    string=Ww^Bw\
-    aliasof=Gt, Ww
+    string=^Bw\
+    aliasof=_bas, Gt
     editor_group=bridge, water
 [/terrain]
+
+
+#  >>>>>>>> Shallow Water Bridge
+# [terrain]
+#     symbol_image=bridge-n-s-tile
+#     id=bridge
+#     name= _ "Bridge"
+#     string=Ww^Bw|
+#     aliasof=Gt, Ww
+#     editor_group=bridge, water
+# [/terrain]
+
+# [terrain]
+#     symbol_image=bridge-ne-sw-tile
+#     id=bridgediag1
+#     name= _ "Bridge"
+#     string=Ww^Bw/
+#     aliasof=Gt, Ww
+#     editor_group=bridge, water
+# [/terrain]
+
+# [terrain]
+#     symbol_image=bridge-se-nw-tile
+#     id=bridgediag2
+#     name= _ "Bridge"
+#     string=Ww^Bw\
+#     aliasof=Gt, Ww
+#     editor_group=bridge, water
+# [/terrain]
+
 
 #  >>>>>>>> Deep Water Bridge
-[terrain]
-    symbol_image=bridge-deep-n-s-tile
-    id=bridgedeep
-    name= _ "Bridge"
-    string=Wo^Bw|
-    aliasof=Gt, Wo
-    editor_group=bridge, water
-[/terrain]
+#[terrain]
+#    symbol_image=bridge-deep-n-s-tile
+#    id=bridgedeep
+#    name= _ "Bridge"
+#    string=Wo^Bw|
+#    aliasof=Gt, Wo
+#    editor_group=bridge, water
+#[/terrain]
+#
+#[terrain]
+#    symbol_image=bridge-deep-ne-sw-tile
+#    id=bridgedeepdiag1
+#    name= _ "Bridge"
+#    string=Wo^Bw/
+#    aliasof=Gt, Wo
+#    editor_group=bridge, water
+#[/terrain]
 
-[terrain]
-    symbol_image=bridge-deep-ne-sw-tile
-    id=bridgedeepdiag1
-    name= _ "Bridge"
-    string=Wo^Bw/
-    aliasof=Gt, Wo
-    editor_group=bridge, water
-[/terrain]
+# [terrain]
+#     symbol_image=bridge-deep-se-nw-tile
+#     id=bridgedeepdiag2
+#     name= _ "Bridge"
+#     string=Wo^Bw\
+#     aliasof=Gt, Wo
+#     editor_group=bridge, water
+# [/terrain]
 
-[terrain]
-    symbol_image=bridge-deep-se-nw-tile
-    id=bridgedeepdiag2
-    name= _ "Bridge"
-    string=Wo^Bw\
-    aliasof=Gt, Wo
-    editor_group=bridge, water
-[/terrain]
+# #  >>>>>>>> Swamp Water Bridge
+# [terrain]
+#     symbol_image=bridge-swamp-n-s-tile
+#     id=bridgeswamp
+#     name= _ "Bridge"
+#     string=Ss^Bw|
+#     aliasof=Gt, Ss
+#     editor_group=bridge, water
+# [/terrain]
 
-#  >>>>>>>> Swamp Water Bridge
-[terrain]
-    symbol_image=bridge-swamp-n-s-tile
-    id=bridgeswamp
-    name= _ "Bridge"
-    string=Ss^Bw|
-    aliasof=Gt, Ss
-    editor_group=bridge, water
-[/terrain]
+# [terrain]
+#     symbol_image=bridge-swamp-ne-sw-tile
+#     id=bridgeswampdiag1
+#     name= _ "Bridge"
+#     string=Ss^Bw/
+#     aliasof=Gt, Ss
+#     editor_group=bridge, water
+# [/terrain]
 
-[terrain]
-    symbol_image=bridge-swamp-ne-sw-tile
-    id=bridgeswampdiag1
-    name= _ "Bridge"
-    string=Ss^Bw/
-    aliasof=Gt, Ss
-    editor_group=bridge, water
-[/terrain]
-
-[terrain]
-    symbol_image=bridge-swamp-se-nw-tile
-    id=bridgeswampdiag2
-    name= _ "Bridge"
-    string=Ss^Bw\
-    aliasof=Gt, Ss
-    editor_group=bridge, water
-[/terrain]
+# [terrain]
+#     symbol_image=bridge-swamp-se-nw-tile
+#     id=bridgeswampdiag2
+#     name= _ "Bridge"
+#     string=Ss^Bw\
+#     aliasof=Gt, Ss
+#     editor_group=bridge, water
+# [/terrain]
 
 #  >>>>>>>> Chasm Bridge
 
