@@ -224,6 +224,16 @@ void terrain_builder::rebuild_terrain(const gamemap::location &loc)
 		img_loc.add_frame(100,image::locator("terrain/" + filename + ".png"));
 		img_loc.start_animation(0, true);
 		btile.images_background.push_back(img_loc);
+		
+		//Combine base and overlay image if neccessary
+		if(map_.get_terrain_info(map_.get_terrain(loc)).is_combined()) {
+			const std::string filename_ovl =
+				map_.get_terrain_info(map_.get_terrain(loc)).minimap_image_overlay();
+			animated<image::locator> img_loc_ovl;
+			img_loc_ovl.add_frame(100,image::locator("terrain/" + filename_ovl + ".png"));
+			img_loc_ovl.start_animation(0, true);
+			btile.images_background.push_back(img_loc_ovl);
+		}
 	}
 }
 
