@@ -30,6 +30,7 @@
 
 terrain_type::terrain_type() :
 		minimap_image_("void"), 
+		minimap_image_overlay_("void"), 
 		editor_image_("void"),
 		id_(),
 		name_(),
@@ -48,11 +49,14 @@ terrain_type::terrain_type() :
 		editor_group_(),
 		village_(false), 
 		castle_(false), 
-		keep_(false)
+		keep_(false),
+		overlay_(false), 
+		combined_(false)
 {}
 
 terrain_type::terrain_type(const config& cfg) :
 		minimap_image_(cfg["symbol_image"]),
+		minimap_image_overlay_("void"), 
 		editor_image_(cfg["editor_image"]),
 		id_(cfg["id"]),
 		name_(cfg["name"]),
@@ -91,6 +95,9 @@ terrain_type::terrain_type(const config& cfg) :
 	if(editor_image_.empty()) {
 		editor_image_ = minimap_image_;
 	}
+
+	combined_ = false;
+	overlay_ = (number_.base == t_translation::NO_LAYER) ? true : false; 
 
 	mvt_type_.push_back(number_);
 	def_type_.push_back(number_);
@@ -152,6 +159,69 @@ terrain_type::terrain_type(const config& cfg) :
 	}
 }
 
+terrain_type::terrain_type(const terrain_type& base, const terrain_type& overlay) : 
+	overlay_(false), 
+	combined_(true)
+{
+	number_ = t_translation::t_terrain(base.number_.base, overlay.number_.overlay);
+
+	minimap_image_ = base.minimap_image_;
+	minimap_image_overlay_ = overlay.minimap_image_;
+	editor_image_ = overlay.editor_image_;
+
+	name_ = overlay.name_;
+	id_ = base.id_+"^"+overlay.id_;
+
+	mvt_type_ = overlay.mvt_type_;
+	def_type_ = overlay.def_type_;
+
+	merge_alias_lists(mvt_type_, base.mvt_type_); 
+	merge_alias_lists(def_type_, base.def_type_); 
+
+	union_type_ = mvt_type_;
+	union_type_.insert( union_type_.end(), def_type_.begin(), def_type_.end() );
+
+	// remove + and -
+	union_type_.erase(std::remove(union_type_.begin(), union_type_.end(),
+				t_translation::MINUS), union_type_.end());
+
+	union_type_.erase(std::remove(union_type_.begin(), union_type_.end(),
+				t_translation::PLUS), union_type_.end());
+
+	// remove doubles
+	std::sort(union_type_.begin(),union_type_.end());
+	union_type_.erase(std::unique(union_type_.begin(), union_type_.end()), union_type_.end());
+
+
+	height_adjust_ = overlay.height_adjust_;
+	submerge_ = overlay.submerge_;
+	light_modification_ = base.light_modification_ + overlay.light_modification_;
+
+	heals_ = maximum<int>(base.heals_, overlay.heals_);
+
+	village_ = base.village_ | overlay.village_;
+	castle_ = base.castle_ | overlay.castle_;
+	keep_ = base.keep_ | overlay.keep_;
+
+	//mouse over message are only shown on villages
+	if(base.village_) {
+		income_description_ = base.income_description_;
+		income_description_ally_ = base.income_description_ally_;
+		income_description_enemy_ = base.income_description_enemy_;
+		income_description_own_ = base.income_description_own_;
+	}
+	else if (overlay.village_) {
+		income_description_ = overlay.income_description_;
+		income_description_ally_ = overlay.income_description_ally_;
+		income_description_enemy_ = overlay.income_description_enemy_;
+		income_description_own_ = overlay.income_description_own_;
+	}
+
+	editor_group_ = ""; 
+	
+}
+
+
 void create_terrain_maps(const std::vector<config*>& cfgs,
                          t_translation::t_list& terrain_list,
                          std::map<t_translation::t_terrain, terrain_type>& letter_to_terrain)
@@ -163,4 +233,42 @@ void create_terrain_maps(const std::vector<config*>& cfgs,
 		letter_to_terrain.insert(std::pair<t_translation::t_terrain, terrain_type>(
 		                              terrain.number(),terrain));
 	}
+}
+
+void merge_alias_lists(t_translation::t_list& first, const t_translation::t_list& second)
+{
+	// Insert second vector into first when the terrain _ref^base is encountered
+
+	bool revert = (first.front() == t_translation::MINUS ? true : false);
+	t_translation::t_list::iterator i;
+
+	for(i = first.begin(); i != first.end(); i++) {
+		if(*i == t_translation::PLUS) {
+			revert = false;
+			continue;
+		} else if(*i == t_translation::MINUS) {
+			revert = true;
+			continue;
+		}
+
+		if(*i == t_translation::BASE) {
+			t_translation::t_list::iterator insert_it = first.erase(i);
+			//if we are in reverse mode, insert PLUS before and MINUS after the base list
+            //so calculation of base aliases will work normal
+			if(revert) {
+				insert_it = first.insert(insert_it, t_translation::PLUS);
+                insert_it++;
+				insert_it = first.insert(insert_it, t_translation::MINUS);
+			}
+			else {
+                //else insert PLUS after the base aliases to restore previous "reverse state"
+				insert_it =  first.insert(insert_it, t_translation::PLUS);
+			}
+
+			first.insert(insert_it, second.begin(), second.end());
+
+			break;
+		}
+	}
+
 }
