@@ -76,6 +76,7 @@ Version 1.5.0-svn:
    * new [unit_side] theme element : this is the side of the current unit (flag)
    * Preprocessor now logs when it encounters an undefined macro, and when it
      fails opening a file.
+   * Add support for overlay terrains (terrains which can be placed above any base terrain)
  * miscellaneous and bug fixes:
    * Fixed error message for broken add-on campaigns (bug #11078)
    * Refactored the in-game console and added help function (patch #1036)
